Remove in-progress download files when DownloadManagerImpl shuts down

Shutting down the download manager will not remove in-progress file today.
However, in downloadItemImpl::InterruptWithPartialState(), if the download is
in a resuming state while download manager got shudown, then the file is
removed. This behavior is not consistent.
Since desktop already has the warning dialog when user tries to shut down
Chrome while there are in-progress download, we don't need to keep the
in-progress files. Clicking shut down pretty much means canceling the download.

BUG=901642

Change-Id: I7bcf30b21fca59bf2cc57a23f0a41d49f0639ce8
Reviewed-on: https://chromium-review.googlesource.com/c/1321574
Reviewed-by: Xing Liu <xingliu@chromium.org>
Commit-Queue: Min Qin <qinmin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#608563}
Former-commit-id: c534927ec758f7c97b4c3615ba1a6d2620a68d20